[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/PreBattle/PreBattleMedalUIServerScn.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Generic/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Scenes/VivoView/VivoView.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/VivoView/medals/Team_Holder_Enemy.png" type="Texture" id=4]
[ext_resource path="res://Assets/VivoView/medals/Team_Holder_Battle.png" type="Texture" id=5]
[ext_resource path="res://Assets/Backgrounds/Skull_Background.png" type="Texture" id=6]
[ext_resource path="res://Assets/VivoView/pre-battle/Ready!_idle.png" type="Texture" id=7]
[ext_resource path="res://Assets/VivoView/buttons/FFBack.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Menu/shovel_cursor.png" type="Texture" id=9]
[ext_resource path="res://Scripts/UI/UISpace/UICursor.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Medals/MedalSlot.gd" type="Script" id=11]
[ext_resource path="res://Scenes/PreBattle/PreBattle.gd" type="Script" id=12]
[ext_resource path="res://Fonts/Resource/FFBasicFont.tres" type="Theme" id=13]
[ext_resource path="res://Scripts/UI/UISpace/UIItem.gd" type="Script" id=14]
[ext_resource path="res://Scripts/Generic/MusicLoop.gd" type="Script" id=18]
[ext_resource path="res://Assets/Music/09_Battle Briefing.wav" type="AudioStream" id=19]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UICursor:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "cursor"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UICursor:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ) ]
}

[node name="PreBattle" type="Node2D"]
script = ExtResource( 12 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
script = ExtResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="SkullBackground" type="Sprite" parent="."]
scale = Vector2( 2.00781, 1.58333 )
texture = ExtResource( 6 )
offset = Vector2( 127.502, 96.0002 )

[node name="VivoView" parent="." instance=ExtResource( 3 )]
position = Vector2( 10, 12 )

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="TeamHolderEnemy" type="Sprite" parent="UI"]
position = Vector2( 385, 42 )
texture = ExtResource( 4 )

[node name="Player" type="Label" parent="UI/TeamHolderEnemy"]
margin_left = 21.0
margin_top = 14.0
margin_right = 118.0
margin_bottom = 25.0
theme = ExtResource( 13 )
text = "Enemy"

[node name="TeamHolderBattle" type="Sprite" parent="UI"]
position = Vector2( 386, 186 )
texture = ExtResource( 5 )

[node name="Player" type="Label" parent="UI/TeamHolderBattle"]
margin_left = -102.0
margin_top = -42.0
margin_right = -40.0
margin_bottom = -31.0
theme = ExtResource( 13 )
text = "Player"

[node name="TeamName" type="Label" parent="UI/TeamHolderBattle"]
margin_left = -88.0
margin_top = -22.0
margin_right = 26.0
margin_bottom = -11.0
theme = ExtResource( 13 )
text = "Team Name"

[node name="UICursorOscillate" type="AnimationPlayer" parent="UI"]
anims/RESET = SubResource( 1 )
anims/cursor = SubResource( 2 )

[node name="UICursor" type="Sprite" parent="UI"]
z_index = 4
texture = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Medals" type="Node2D" parent="UI"]

[node name="Slots" type="Node2D" parent="UI"]

[node name="Own" type="Node2D" parent="UI/Slots"]

[node name="MedalSlot" type="Sprite" parent="UI/Slots/Own"]
position = Vector2( 308, 201 )
script = ExtResource( 11 )

[node name="MedalSlot2" type="Sprite" parent="UI/Slots/Own"]
position = Vector2( 353, 201 )
script = ExtResource( 11 )

[node name="MedalSlot3" type="Sprite" parent="UI/Slots/Own"]
position = Vector2( 390, 201 )
script = ExtResource( 11 )

[node name="MedalSlot4" type="Sprite" parent="UI/Slots/Own"]
position = Vector2( 440, 201 )
script = ExtResource( 11 )

[node name="MedalSlot5" type="Sprite" parent="UI/Slots/Own"]
position = Vector2( 476, 201 )
script = ExtResource( 11 )

[node name="Enemy" type="Node2D" parent="UI/Slots"]

[node name="MedalSlot6" type="Sprite" parent="UI/Slots/Enemy"]
position = Vector2( 346, 36 )
script = ExtResource( 11 )

[node name="MedalSlot7" type="Sprite" parent="UI/Slots/Enemy"]
position = Vector2( 391, 36 )
script = ExtResource( 11 )

[node name="MedalSlot8" type="Sprite" parent="UI/Slots/Enemy"]
position = Vector2( 436, 36 )
script = ExtResource( 11 )

[node name="Menu" type="Node2D" parent="UI"]

[node name="Ready" type="Sprite" parent="UI"]
position = Vector2( 464, 283 )
texture = ExtResource( 7 )
script = ExtResource( 14 )

[node name="Back" type="Sprite" parent="UI"]
position = Vector2( 356, 293 )
texture = ExtResource( 8 )
script = ExtResource( 14 )

[connection signal="new_vivosaur_focused" from="UI" to="VivoView" method="push_vivosaur"]
[connection signal="slots_updated" from="UI" to="." method="_on_UI_slots_updated"]
[connection signal="selected" from="UI/Ready" to="." method="_on_Ready_selected"]
[connection signal="selected" from="UI/Back" to="." method="_on_Back_selected"]
